--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {
    font-size: 1rem;
    line-height: 1.5;
    color: #2d3436;
-   overflow: hidden;
+   overflow-x: hidden;
+   overflow-y: auto;
 }
 
 img {
