--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body {
    font-size: 1rem;
    line-height: 1.5;
    color: #2d3436;
-   overflow-x: hidden;
-   overflow-y: auto;
 }
 
 img {
@@ -178,12 +176,12 @@ section {
    top: 60px;
    left: 0;
    right: 0;
-   transform: translateX(100%);
-   transition: transform 500ms linear;
+   visibility: hidden;
+   transition: visibility 500ms ease-in;
 }
 
 .nav-links-open {
-   transform: translateX(0);
+   visibility: visible;
 }
 
 .nav-links li a {
